@@ -232,9 +232,9 @@ namespace libtorrent { namespace dht
 		
 		// turns on and off individual components' logging
 
-//		rpc_log().enable(false);
-//		node_log().enable(false);
-//		traversal_log().enable(false);
+		rpc_log().enable(false);
+		node_log().enable(false);
+		traversal_log().enable(false);
 //		dht_tracker_log.enable(false);
 
 		TORRENT_LOG(dht_tracker) << "starting DHT tracker with node id: " << m_dht.nid();
